fixed some broken css interactions with gallery layout

--- a/frontend/src/css/EditorPageCSS/Editor.css
+++ b/frontend/src/css/EditorPageCSS/Editor.css
@@ -1,7 +1,3 @@
-:root {
-    width: 100vw;
-}
-
 .editor-container {
     width: 100%;
 }
