--- a/frontend/src/pages/Navbar.css
+++ b/frontend/src/pages/Navbar.css
@@ -1,5 +1,10 @@
+:root {
+    --navar-height: 4em;
+}
+
 /* General Body Styles */
 body {
+    /* margin-top: var(--navbar-height); */
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: var(--bg-color);
@@ -12,8 +17,9 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw; 
-    height: 50px;
+    width: 100%;
+    box-sizing: border-box;
+    height: var(--navbar-height);
     margin: 0;
     background-color: var(--primary-color);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -30,6 +36,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px; 
+    box-sizing: border-box; /* Add this */
 }
 
 .navbar-brand {
